package platform;

public interface ModelAndMCA extends Model, MCA {



}

